--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "history": "^4.7.2",
     "husky": "^0.14.3",
     "immutable": "^3.8.2",
-    "jest": "^23.4.1",
     "jsdoc": "^3.5.5",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
@@ -35,5 +34,12 @@
     "precommit": "fixme --path ./src",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-jest": "^23.4.2",
+    "enzyme": "^3.5.0",
+    "jest": "^23.5.0",
+    "jest-cli": "20.0.4",
+    "webpack-conf-react-scripts": "0.0.3"
   }
 }
